Most of the way towards getting QDrant working

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DATABASE_URL='mysql://iftxgg...'
 NEXTAUTH_URL=http://localhost:3000
 GITHUB_TOKEN=ghp_z89l8FF0f1Po...
 OPENAI_API_KEY=sk-Z9rmFlJiyJ80b...
+QDRANT_HOST=https://c7cc2...
+QDRANT_API_KEY=50GUA6...
