--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/hooks": "^6.0.8",
     "@mantine/next": "^6.0.8",
     "@mantine/notifications": "^6.0.8",
+    "@pinecone-database/pinecone": "^0.0.12",
     "@prisma/client": "^4.13.0",
     "@tabler/icons-react": "^2.16.0",
     "@tanstack/react-query": "^4.29.3",
