--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "zod-prisma-types": "^2.5.6"
   },
   "devDependencies": {
+    "@octokit/types": "^9.0.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.13.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
