--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
+    "target": "esnext",
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
