--- a/package.json
+++ b/package.json
@@ -3,65 +3,66 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "format": "eslint --fix ./src/**/*.{js,jsx,ts,tsx,mjs,tjs} --quiet --ignore-path ../../.gitignore",
-    "lint": "npm run format && next lint",
+    "lint": "eslint --fix ./**/*.{ts,tsx} --ignore-path .gitignore && next lint",
     "build": "next build",
     "dev": "next | pino-pretty -c -t",
     "generate:prisma": "prisma generate",
     "generate": "pnpm /^generate:.*/",
     "start": "next start",
     "actions": "act --secret-file .env",
+    "preinstall": "npx only-allow pnpm",
     "postinstall": "npm run generate",
-    "ingest": "dotenv -- tsx scripts/ingest.ts | pino-pretty -c -t"
+    "ingest": "dotenv -- tsx scripts/ingest.ts | pino-pretty -c -t",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/server": "^11.10.0",
-    "@mantine/core": "^6.0.8",
-    "@mantine/dates": "^6.0.8",
-    "@mantine/form": "^6.0.8",
-    "@mantine/hooks": "^6.0.8",
-    "@mantine/next": "^6.0.8",
-    "@mantine/notifications": "^6.0.8",
-    "@pinecone-database/pinecone": "^0.0.12",
-    "@prisma/client": "^4.13.0",
-    "@tabler/icons-react": "^2.16.0",
-    "@tanstack/react-query": "^4.29.3",
-    "@trpc/client": "^10.20.0",
-    "@trpc/next": "^10.20.0",
-    "@trpc/react-query": "^10.20.0",
-    "@trpc/server": "^10.20.0",
-    "axios": "^1.3.6",
-    "date-fns": "^2.29.3",
-    "dayjs": "^1.11.7",
-    "next": "13.3.0",
-    "next-auth": "^4.22.1",
-    "next-plausible": "^3.7.2",
+    "@emotion/react": "^11.11.0",
+    "@emotion/server": "^11.11.0",
+    "@mantine/core": "^6.0.11",
+    "@mantine/form": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
+    "@mantine/next": "^6.0.11",
+    "@mantine/notifications": "^6.0.11",
+    "@pinecone-database/pinecone": "^0.1.6",
+    "@prisma/client": "^4.14.1",
+    "@tabler/icons-react": "^2.20.0",
+    "@tanstack/react-query": "^4.29.7",
+    "@trpc/client": "^10.27.1",
+    "@trpc/next": "^10.27.1",
+    "@trpc/react-query": "^10.27.1",
+    "@trpc/server": "^10.27.1",
+    "date-fns": "^2.30.0",
+    "next": "13.4.3",
     "nextjs-cors": "^2.1.2",
-    "octokit": "^2.0.14",
+    "octokit": "^2.0.16",
     "openai": "^3.2.1",
     "p-retry": "^5.1.2",
-    "pino": "^8.11.0",
+    "pino": "^8.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
-    "superjson": "1.12.2",
-    "zod": "3.21.4",
-    "zod-prisma-types": "^2.5.6"
+    "zod": "3.21.1"
   },
   "devDependencies": {
-    "@octokit/types": "^9.0.0",
-    "@prisma/nextjs-monorepo-workaround-plugin": "^4.13.0",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
+    "@octokit/types": "^9.2.3",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.1",
     "dotenv-cli": "^7.2.1",
-    "eslint-define-config": "^1.18.0",
-    "husky": "^8.0.3",
+    "eslint": "^8.39.0",
+    "eslint-config-next": "^13.3.1",
+    "eslint-define-config": "^1.20.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.0",
     "pino-pretty": "^10.0.0",
-    "prettier": "^2.8.7",
-    "prisma": "^4.13.0",
-    "tsx": "^3.12.6",
-    "typescript": "^5.0.4"
+    "prettier": "^2.8.8",
+    "prisma": "^4.14.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.0.4",
+    "zod-prisma-types": "^2.7.1"
   },
   "ct3aMetadata": {
     "initVersion": "7.3.2"
