Progress updates to a wide variety of things

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@apps/contributor",
+  "name": "contributor-dev",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "lint": "eslint --fix ./**/*.{ts,tsx} --ignore-path .gitignore && next lint",
     "build": "next build",
     "dev": "next | pino-pretty -c -t",
+    "test": "jest",
     "generate:prisma": "prisma generate",
-    "generate": "pnpm /^generate:.*/",
+    "generate": "run-p generate:*",
     "start": "next start",
-    "actions": "act --secret-file .env",
-    "preinstall": "npx only-allow pnpm",
     "postinstall": "npm run generate",
     "ingest": "dotenv -- tsx scripts/ingest.ts | pino-pretty -c -t",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "workflows": "act --secret-file .env"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -32,11 +32,10 @@
     "@trpc/next": "^10.27.1",
     "@trpc/react-query": "^10.27.1",
     "@trpc/server": "^10.27.1",
-    "@vercel/analytics": "^1.0.0",
+    "@vercel/analytics": "^1.0.1",
     "@vercel/postgres": "^0.3.0",
     "date-fns": "^2.30.0",
     "next": "13.4.3",
-    "nextjs-cors": "^2.1.2",
     "octokit": "^2.0.16",
     "openai": "^3.2.1",
     "p-retry": "^5.1.2",
@@ -45,22 +44,25 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "superjson": "^1.12.3",
-    "zod": "3.21.1"
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@octokit/types": "^9.2.3",
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
+    "@swc/core": "^1.3.59",
+    "@swc/jest": "^0.2.26",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "dotenv-cli": "^7.2.1",
-    "eslint": "^8.39.0",
-    "eslint-config-next": "^13.3.1",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.3",
     "eslint-define-config": "^1.20.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "npm-run-all": "^4.1.5",
     "pino-pretty": "^10.0.0",
     "prettier": "^2.8.8",
     "prisma": "^4.14.1",
