Fully implement embeddings interface

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint --fix ./**/*.{ts,tsx} --ignore-path .gitignore && next lint",
     "build": "next build",
     "dev": "next | pino-pretty -c -t",
-    "test": "jest",
+    "test": "jest --setupFiles dotenv/config",
     "generate:prisma": "prisma generate",
     "generate": "run-p generate:*",
     "start": "next start",
@@ -34,7 +34,9 @@
     "@trpc/server": "^10.27.1",
     "@vercel/analytics": "^1.0.1",
     "@vercel/postgres": "^0.3.0",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.0.3",
     "next": "13.4.3",
     "octokit": "^2.0.16",
     "openai": "^3.2.1",
