Generate from GitHub OpenAPI spec; various other small fixes

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@ node_modules/
 
 .cache/
 !.cache/README.md
+.generated/
+!.generated/README.md
+
 .idea/workspace.xml
 .vscode/
 .next/
 .turbo/
 .vercel/
-generated/
