--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "lint": "eslint --fix ./**/*.{ts,tsx} --ignore-path .gitignore && next lint",
     "build": "next build",
     "dev": "next | pino-pretty -c -t",
-    "test": "jest --setupFiles dotenv/config",
-    "generate:prisma": "prisma generate",
+    "test": "jest",
     "generate": "run-p generate:*",
+    "generate:prisma": "prisma generate",
+    "generate:openapi": "run-s generate:openapi:*",
+    "generate:openapi:trimmer": "openapi-endpoint-trimmer --url https://raw.githubusercontent.com/github/rest-api-description/main/descriptions/api.github.com/api.github.com.yaml --output .cache/github-api-spec.yaml --prefixes /search/repositories,/repos/{owner}/{repo}/readme,/repos/{owner}/{repo}/languages",
+    "generate:openapi:validate": "swagger-cli validate .cache/github-api-spec.yaml",
+    "generate:openapi:zod": "openapi-zod-client .cache/github-api-spec.yaml --output .generated/github-api-schemas.ts",
     "start": "next start",
     "postinstall": "npm run generate",
     "ingest": "dotenv -- tsx scripts/ingest.ts | pino-pretty -c -t",
@@ -49,6 +53,7 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@apidevtools/swagger-cli": "^4.0.4",
     "@octokit/types": "^9.2.3",
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
     "@swc/core": "^1.3.59",
@@ -65,6 +70,8 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
+    "openapi-endpoint-trimmer": "^2.0.0",
+    "openapi-zod-client": "^1.6.4",
     "pino-pretty": "^10.0.0",
     "prettier": "^2.8.8",
     "prisma": "^4.14.1",
